Updated FPV board schematic. Started implementation of FPV board PCB. Added .gitignore

--- a/electronics/fpv_board/kicad/fpv_board.cmp
+++ b/electronics/fpv_board/kicad/fpv_board.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 5/25/2014 4:11:21 AM
+Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 5/25/2014 6:22:34 PM
 
 BeginCmp
 TimeStamp = /5381641C;
@@ -22,6 +22,13 @@ IdModule  = PIN_ARRAY_3X1;
 EndCmp
 
 BeginCmp
+TimeStamp = /53826CEB;
+Reference = K4;
+ValeurCmp = CONN_3;
+IdModule  = RP-SMA_board_mount;
+EndCmp
+
+BeginCmp
 TimeStamp = /53815D0B;
 Reference = P1;
 ValeurCmp = CONN_2;
@@ -36,52 +43,45 @@ IdModule  = PIN_ARRAY_2X1;
 EndCmp
 
 BeginCmp
-TimeStamp = /5381A5F5;
-Reference = P3;
-ValeurCmp = CONN_1;
-IdModule  = 1PIN_SMD;
-EndCmp
-
-BeginCmp
 TimeStamp = /5381A7B1;
 Reference = SW1;
 ValeurCmp = SWITCH_INV;
-IdModule  = ;
+IdModule  = solder_jumper_3;
 EndCmp
 
 BeginCmp
 TimeStamp = /5381A7CF;
 Reference = SW2;
 ValeurCmp = SWITCH_INV;
-IdModule  = ;
+IdModule  = solder_jumper_3;
 EndCmp
 
 BeginCmp
 TimeStamp = /5381A201;
 Reference = SW3;
 ValeurCmp = 4-SW_DIP;
-IdModule  = ;
+IdModule  = 4-SW_DIP;
 EndCmp
 
 BeginCmp
 TimeStamp = /538187FC;
 Reference = U1;
 ValeurCmp = LD1117DT33;
-IdModule  = DPAK2;
+IdModule  = DPAK2_LD1117DT33;
 EndCmp
 
 BeginCmp
 TimeStamp = /5381889D;
 Reference = U2;
 ValeurCmp = L78M05;
-IdModule  = DPAK2;
+IdModule  = DPAK2_L78M05;
 EndCmp
 
 BeginCmp
 TimeStamp = /53818C31;
 Reference = U3;
 ValeurCmp = TX-5800-200;
-IdModule  = ;
+IdModule  = TX_5800_200;
 EndCmp
 
 EndListe
